--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -9,15 +9,15 @@
         <mat-list-item> REPORT</mat-list-item>
         <mat-list-item> ACTION</mat-list-item>
         <mat-list-item>
-            <mat-icon class="iconColor"> near_me</mat-icon>
+            <mat-icon class="iconColor mr-2"> near_me</mat-icon>
             Pincode
         </mat-list-item>
         <mat-list-item>
-            <mat-icon class="iconColor"> location_on</mat-icon>
+            <mat-icon class="iconColor mr-2"> location_on</mat-icon>
             Address check
         </mat-list-item>
         <mat-list-item>
-            <mat-icon class="iconColor">update</mat-icon>OTP
+            <mat-icon class="iconColor mr-2">update</mat-icon>OTP
         </mat-list-item>
         <mat-list-item> EVENT TRACKING</mat-list-item>
 
