side bar styles

--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -4,12 +4,12 @@
 
 }
 .headerCss{
-  padding-top: 1rem;
-  padding-left: 4rem;
+  padding: 1.2rem 0 1.5rem 4rem;
   font-size: 1.5rem;
+  background-color: #091622;
 }
 .sw-sidenav{
-    background-color: rgb(3, 23, 43);
+    background-color: #1e3042;
   }
   .mat-list-base .mat-list-item {
     color: rgba(255, 255, 255, 0.87);
